# draft

./: Cargo.toml  bar.dr  flake.nix  foo.dr  foo.sm  justfile  libdraft.c  read_file.dr  tests.dr  todo.md  typeinfo.dr
bar/: inner.dr  innerdep.dr
src/: args.rs  compile.rs  context.rs  error.rs  lib.rs  main.rs  node.rs  parser.rs  scope.rs  semantic.rs  source.rs  ty.rs
