[package]
name = "draft"
version = "0.1.0"
edition = "2021"

[lib]

[dependencies]
cranelift-codegen = "0.97.1"
cranelift-jit = "0.97.1"
cranelift-module = "0.97.1"
cranelift-native = "0.97.1"
cranelift-object = "0.97.1"
cranelift-frontend = "0.97.1"
string-interner = "0.14.0"
ropey = "1.6.0"
clap = { version = "4.3.15", features = ["derive"] }
tracing = "0.1.37"
tracing-tracy = "0.10.2"
tracing-subscriber = "0.3.17"
bumpalo = { version = "3.13.0", features = ["allocator_api", "collections"] }
